tooling/nargo_cli/tests/snapshots/execution_success/traits_in_crates_2/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
use crate1::MyTrait;

fn main(x: Field, y: pub Field) {
    let mut V: crate2::MyStruct = crate2::MyStruct { Q: x };
    V.Add10();
    assert(V.Q == y);
}
